修复给链接添加 utm 参数格式错误的问题

--- a/index.html
+++ b/index.html
@@ -5615,7 +5615,7 @@
                         $(this).attr('target', '_self')
                     } else {
                         if (url && url.indexOf(utm_info) == -1) {
-                            if (url.indexOf("?") == -1 || url.indexOf("/?") == -1) {
+                            if (url.indexOf("?") == -1) {
                                 url += '?';
                             } else {
                                 url += '&';
