修改 btc 和 eth 二维码图片以及显示错乱的问题

--- a/donate.html
+++ b/donate.html
@@ -180,21 +180,24 @@
                         <strong style="color: red">注意:</strong>微信现在看不到转账人的昵称了,请通过微信支付进行捐赠的小伙伴在本页面底部的评论区留下你的昵称和捐赠金额，否则在捐赠列表里就只能显示捐赠金额！
                     </blockquote>
                 </div>
-                <div class="donate-method-qr">
+            </div>
+            <div class="row">
+                <div class="donate-method-qr text-center">
                     <h4 class="donate-method-title">支付宝</h4>
                     <img class="donate-method-qr-img" src="./static/image/alipay_qr_code.png" />
                 </div>
-                <div class="donate-method-qr">
+                <div class="donate-method-qr text-center">
                     <h4 id="wechat" class="donate-method-title">微信</h4>
                     <img class="donate-method-qr-img" src="./static/image/weichat_pay_qr_code.png" />
                 </div>
-                <div class="donate-method-qr">
-                    <h4 id="wechat" class="donate-method-title">比特币</h4>
-                    <img class="donate-method-qr-img" src="https://i.loli.net/2020/02/21/fPyzhV2bi7mqECZ.jpg" />
+
+                <div class="donate-method-qr text-center">
+                    <h4 id="btn-action" class="donate-method-title">BTC</h4>
+                    <img class="donate-dc-qr-img" src="https://i.loli.net/2020/03/31/UWdfMea9CwyjlR3.jpg" />
                 </div>
-                <div class="donate-method-qr">
-                    <h4 id="wechat" class="donate-method-title">以太坊</h4>
-                    <img class="donate-method-qr-img" src="https://i.loli.net/2020/02/21/mAqknpQ3TZHC7Xs.jpg" />
+                <div class="donate-method-qr text-center">
+                    <h4 id="eth" class="donate-method-title">ETH</h4>
+                    <img class="donate-dc-qr-img" src="https://i.loli.net/2020/03/31/YN1GUnAzDREMJ7p.jpg" />
                 </div>
             </div>
             <!-- 捐赠列表 -->
