add btcroo ad info

--- a/index.html
+++ b/index.html
@@ -214,6 +214,11 @@
                     </a>
                 </div> -->
                 <div class="swiper-slide">
+                    <a href="https://www.btcroo.com/chash/invite/momobudeyu" target="_blank" onclick="trackOutboundLink('https://www.btcroo.com', 'Btcroo', 'click');" title="比特袋鼠-一键挖矿，化繁为简，新注册用户免费送 30 天 1T 算力，免 10 天电费，收益可提现" >
+                        <img src="https://i.loli.net/2020/04/05/o1x8C9sXLvSW3rG.jpg">
+                    </a>
+                </div>
+                <div class="swiper-slide">
                     <a href="https://androidweekly.io?utm_source=androiddevtools.cn&amp;utm_medium=banner" target="_blank" onclick="trackOutboundLink('https://androidweekly.io', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。" >
                         <img src="https://i.loli.net/2019/10/31/DZd9HX31jL2NlxY.png">
                     </a>
