add codefuns ad

--- a/donate.html
+++ b/donate.html
@@ -18,7 +18,7 @@
     <link rel="apple-touch-icon" sizes="72x72" href="static/image/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
     <!-- GrowingIO 统计 -->
-    <script type='text/javascript'>
+    <!-- <script type='text/javascript'>
         var _vds = _vds || [];
         window._vds = _vds;
         (function() {
@@ -32,7 +32,7 @@
                 s.parentNode.insertBefore(vds, s);
             })();
         })();
-    </script>
+    </script> -->
     <!-- GrowingIO End -->
 </head>
 
@@ -1727,6 +1727,11 @@
             <p class="published">Hosted by <a href="https://pages.coding.me" style="font-weight: bold" target="_blank">Coding Pages</a> and <a href="https://pages.github.com" target="_blank">GitHub Pages</a></p>
         </footer>
     </div>
+    <!-- BEGIN COPY CODEFUND EMBED -->
+    <div id="codefund"></div>
+    <script  src="https://app.codefund.io/properties/783/funder.js" async></script>
+    <!-- END COPY CODEFUND EMBED -->
+
     <!-- 评论JS代码 start (一个网页只需插入一次) -->
     <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
