--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="static/js/swiper.min.js"></script>
     <link rel="stylesheet" href="static/css/swiper.min.css">
     <!-- GrowingIO 统计 -->
-    <script type='text/javascript'>
+    <!-- <script type='text/javascript'>
         var _vds = _vds || [];
         window._vds = _vds;
         (function() {
@@ -37,7 +37,7 @@
                 s.parentNode.insertBefore(vds, s);
             })();
         })();
-    </script>
+    </script> -->
     <!-- GrowingIO End -->
 </head>
 
@@ -5888,6 +5888,12 @@
         })
         gitment.render('comments-container')
     </script>
+
+    <!-- BEGIN COPY CODEFUND EMBED -->
+    <div id="codefund"></div>
+    <script  src="https://app.codefund.io/properties/783/funder.js" async></script>
+    <!-- END COPY CODEFUND EMBED -->
+
     <!-- 评论JS代码 end -->
     <script src="static/js/jquery-2.1.4.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
